# Scrapings

BBK-Thematic/triumph.ru/: app.py  bbk.json  bbk.py  bbk4-9.json  config.py  pyproject.toml
BBK-Thematic/znanium.com/: .env  app.py  pyproject.toml
BBK-Thematic/znanium.com/data/: config.py
BBK-Thematic/znanium.com/services/: bbk.json  theme.py
